# dssim-WebGPU

./: .gitignore  CMakeLists.txt  README.md  READMEja.md
docs/: setup-dawn-windows.md
src_gpu/: CMakeLists.txt  dawn_checksum.cpp  dummy_main.cpp  png_loader.cpp  png_loader.h
src_gpu/shaders/: downsample_2x2.wgsl  lab_preprocess.wgsl  stage0_absdiff.wgsl
tools/: compare.py  make_golden.ps1  run_gpu.ps1  run_ref.ps1
tools/golden/: golden_manifest.json  gray-profile__gray-profile2.ref.json  profile__profile-stripped.ref.json  test1-sm__test2-sm.ref.json
